# pico-sdk

./: .extern_c_ignore  .gitattributes  MODULE.bazel  REPO.bazel  pico_sdk_version.cmake
.github/workflows/: bazel_build.yml  check-extern-c-guards.yml  check_float_tests.yml  check_memmaps.yml
bazel/: BUILD.bazel  README.md  defs.bzl  pico_btstack_make_gatt_header.bzl
bazel/config/: BUILD.bazel
bazel/constraint/: BUILD.bazel
bazel/toolchain/: BUILD.bazel  clang.BUILD  configurable_feature.bzl  gcc_arm_none_eabi.BUILD  objcopy.bzl
bazel/util/: label_flag_matches.bzl  multiple_choice_flag.bzl  pico_linker_scripts.bzl  sdk_define.bzl  transition.bzl
cmake/: generic_board.cmake  pico_pre_load_toolchain.cmake
cmake/preload/toolchains/: pico_arm_cortex_m0plus_clang.cmake  pico_arm_cortex_m23_gcc.cmake  pico_arm_cortex_m33_clang.cmake  pico_arm_cortex_m33_gcc.cmake  pico_riscv_gcc.cmake  pico_riscv_gcc_zcb_zcmp.cmake
docs/: Doxyfile.in  index.h
src/: BUILD.bazel  CMakeLists.txt  combined-docs.cmake  host.cmake  rp2350-arm-s.cmake
src/boards/: BUILD.bazel
src/cmake/: rp2_common.cmake
src/common/boot_picobin_headers/: BUILD.bazel
src/common/boot_picoboot_headers/: BUILD.bazel
src/common/boot_uf2_headers/: BUILD.bazel
src/common/pico_binary_info/: BUILD.bazel  binary_info.bzl
src/common/pico_binary_info/include/pico/binary_info/: structure.h
src/host/: BUILD.bazel
src/host/pico_unique_id/: BUILD.bazel  CMakeLists.txt  unique_id.c
src/host/pico_unique_id/include/pico/: unique_id.h
src/rp2040/pico_platform/: BUILD.bazel  CMakeLists.txt  memmap_blocked_ram.cmake  memmap_blocked_ram.ld  memmap_copy_to_ram.cmake  memmap_copy_to_ram.ld  memmap_default.cmake  memmap_default.ld  memmap_no_flash.cmake  memmap_no_flash.ld
src/rp2040/pico_platform/include/pico/: asm_helper.S  platform.h
src/rp2040/pico_platform/include/pico/platform/: cpu_regs.h
src/rp2040/pico_platform/script_include/: BUILD.bazel  section_boot2.incl  section_no_flash_text.incl  section_platform_end.incl  sections_copy_to_ram_text.incl  sections_default_text.incl  sections_psram.incl
src/rp2350/: rp2350a_interface_pins.json  rp2350b_interface_pins.json
src/rp2350/pico_platform/: BUILD.bazel  CMakeLists.txt  memmap_copy_to_ram.cmake  memmap_copy_to_ram.ld  memmap_default.cmake  memmap_default.ld  memmap_no_flash.cmake  memmap_no_flash.ld  memmap_xip_ram.cmake  memmap_xip_ram.ld
src/rp2350/pico_platform/include/pico/: asm_helper.S  platform.h
src/rp2350/pico_platform/include/pico/platform/: cpu_regs.h
src/rp2350/pico_platform/script_include/: BUILD.bazel  section_platform_end.incl
src/rp2_common/: BUILD.bazel
src/rp2_common/hardware_flash/: BUILD.bazel  flash.c
src/rp2_common/hardware_flash/include/hardware/: flash.h
src/rp2_common/hardware_psram/: BUILD.bazel  CMakeLists.txt  psram.c
src/rp2_common/hardware_psram/include/hardware/: psram.h
src/rp2_common/hardware_riscv_platform_timer/: BUILD.bazel
src/rp2_common/pico_clib_interface/: BUILD.bazel  CMakeLists.txt  cxa_guard.c  llvm_libc_interface.c  llvm_libc_interface_cpp.cpp  newlib_interface.c  picolibc_interface.c
src/rp2_common/pico_clib_interface/include/llvm_libc/: time.h
src/rp2_common/pico_crt0/: BUILD.bazel  CMakeLists.txt  crt0.S  crt0_riscv.S  doc.h  embedded_start_block.inc.S
src/rp2_common/pico_crt0/rp2040/: BUILD.bazel
src/rp2_common/pico_crt0/rp2350/: BUILD.bazel
src/rp2_common/pico_cxx_options/: BUILD.bazel  CMakeLists.txt  new_delete.cpp
src/rp2_common/pico_cxx_options/include/pico/: cxx_options.h
test/: CMakeLists.txt
test/cmsis_test/: BUILD.bazel  CMakeLists.txt
test/fixed_bitset_test/: BUILD.bazel  CMakeLists.txt  fixed_bitset_test.c
test/hardware_irq_test/: BUILD.bazel
test/hardware_pwm_test/: BUILD.bazel
test/hardware_sync_spin_lock_test/: BUILD.bazel  CMakeLists.txt  hardware_sync_spin_lock_test.c
test/kitchen_sink/: BUILD.bazel  CMakeLists.txt  kitchen_sink.c  kitchen_sink_cpp.cpp
test/kitchen_sink/kitchen_sink_extra_end_scripts/: BUILD.bazel  section_extra_post_end.incl
test/kitchen_sink/kitchen_sink_ram_section_scripts/: BUILD.bazel  section_extra_post_data.incl  sections_default.ld
test/kitchen_sink/kitchen_sink_simple_overlay_scripts/: BUILD.bazel  section_extra_post_data.incl  sections_default.ld
test/panic_function_test/: BUILD.bazel  CMakeLists.txt  panic_function_test.c
test/pico_async_context_test/: BUILD.bazel  CMakeLists.txt  pico_async_context_test.c
test/pico_divider_test/: BUILD.bazel  CMakeLists.txt  pico_divider_nesting_test.c  pico_divider_test.c
test/pico_float_test/: BUILD.bazel  CMakeLists.txt  custom_double_funcs_test.c  custom_float_funcs_test.c  double_benchmark.c  float_benchmark.c  m33.c  pico_double_test.c  pico_float_test.c  pico_float_test_hazard3.c
test/pico_low_power_test/: BUILD.bazel  CMakeLists.txt  external_sleep_timer.c  low_power_test_common.h  low_power_test_gpio.c  low_power_test_simple.c  low_power_test_timers.c
test/pico_sem_test/: BUILD.bazel
test/pico_sha256_test/: BUILD.bazel  pico_sha256_test.c
test/pico_stdio_test/: BUILD.bazel
test/pico_stdlib_test/: BUILD.bazel  CMakeLists.txt  pico_stdlib_test.c
test/pico_sync_test/: BUILD.bazel  CMakeLists.txt  pico_sync_test.c
test/pico_test/: BUILD.bazel
test/pico_test/include/pico/: test.h
test/pico_thread_local_test/: BUILD.bazel  CMakeLists.txt  pico_thread_local_test.c  pico_thread_local_test_cpp.cpp
test/pico_time_test/: BUILD.bazel  CMakeLists.txt  pico_time_test.c
test/pico_xip_sram_test/: BUILD.bazel  CMakeLists.txt  pico_critical_xip_sram_test.c  pico_xip_sram_test.c
tools/: CMakeLists.txt  bazel_build.py  bazel_buildifier_lint_check.py  check_board_header.py  check_extern_c_guards.py  check_float_test_names.py  check_source_files_in_bazel_build.py  compare_build_systems.py  extract_cmake_functions.py  extract_configs.py  memmap_annotate.py  memmap_include_tree.py  run_all_bazel_checks.py  run_test_matrix.py  uf2_aspect.bzl
tools/pioasm/: BUILD.bazel  CMakeLists.txt  c_sdk_output.cpp  json_output.cpp  json_output_schema.json  parser.yy
(+561 files in other folders)
