if (NOT TARGET cmsis_core)
    message("Skipping cmsis_test as cmsis_core is unavailable on this platform")
    return()
endif()
# todo remove check
if (NOT PICO_RISCV)
    if (PICO_RP2350 AND PICO_C_COMPILER_IS_GNU AND CMAKE_C_COMPILER_VERSION VERSION_LESS "9.0.0")
        message("Skipping cmsis_test on RP2350 for GCC < 9 due to header bug")
    else()
        add_executable(cmsis_test cmsis_test.c)
        target_link_libraries(cmsis_test PRIVATE pico_stdlib cmsis_core)
        pico_add_extra_outputs(cmsis_test)
    endif()
endif()